[metadata]
author_email = ayaroshlvua@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/andylvua/QuestionsParser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
